--- a/index.html
+++ b/index.html
@@ -87,17 +87,31 @@
     </div>
   </section>
 
-  <section id="dinner">
-    <h2>Dinner Show</h2>
-    <img src="https://images.unsplash.com/photo-1507874457470-272b3c8d8ee2?w=800" alt="Dinner Show">
-    <p>Spettacoli eleganti con musica dal vivo e coreografie d’effetto. Un mix di eleganza, tecnologia e arte per rendere unica ogni serata.</p>
-  </section>
+  <!-- DINNER SHOW -->
+<section id="dinner">
+  <h2>Dinner Show</h2>
+  <!-- Immagine aggiornata: palco elegante, cantante + ballerini, luci viola/oro -->
+  <img
+    src="https://images.unsplash.com/photo-1518544801976-3e1883f0e419?w=1200&q=80&auto=format&fit=crop"
+    alt="Dinner Show - cantante e ballerini su palco con luci viola e oro">
+  <p>
+    Spettacoli eleganti con musica dal vivo e coreografie d’effetto.
+    Un mix di eleganza, tecnologia e arte per rendere unica ogni serata.
+  </p>
+</section>
 
-  <section id="circus">
-    <h2>Circus Show</h2>
-    <img src="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?w=800" alt="Circus Show">
-    <p>Acrobazie, fuoco e illusioni visive per un intrattenimento spettacolare. ShowBiz One porta sul palco energia e creatività senza limiti.</p>
-  </section>
+<!-- CIRCUS SHOW -->
+<section id="circus">
+  <h2>Circus Show</h2>
+  <!-- Immagine aggiornata: performer circensi, fuoco e luci -->
+  <img
+    src="https://images.unsplash.com/photo-1540039155733-5bb30b53aa14?w=1200&q=80&auto=format&fit=crop"
+    alt="Circus Show - performer circensi con fuoco e luci sceniche">
+  <p>
+    Acrobazie, fuoco e illusioni visive per un intrattenimento spettacolare.
+    ShowBiz One porta sul palco energia e creatività senza limiti.
+  </p>
+</section>
 
   <footer>
     <h2>Contatti</h2>
