--- a/index.html
+++ b/index.html
@@ -121,4 +121,57 @@
         </div>
         <div class="service">
           <img class="icon" src="https://cdn-icons-png.flaticon.com/512/2784/2784593.png" alt="">
-          <
+          <h3>Luci e Scenografie</h3>
+          <p>Illuminazione dinamica e scenografie luminose per creare atmosfere uniche.</p>
+        </div>
+        <div class="service">
+          <img class="icon" src="https://cdn-icons-png.flaticon.com/512/149/149122.png" alt="">
+          <h3>Video e Proiezioni</h3>
+          <p>Schermi LED e proiezioni video per eventi indoor e outdoor.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- DINNER SHOW -->
+  <section id="dinner">
+    <div class="wrap">
+      <h2>Dinner Show</h2>
+      <div class="card-img">
+        <!-- Cantante + ballerini, luci viola/oro -->
+        <img src="https://images.unsplash.com/photo-1518544801976-3e1883f0e419?w=1600&q=80&auto=format&fit=crop" alt="Dinner Show – cantante e ballerini su palco con luci viola e oro">
+      </div>
+      <p>Spettacoli eleganti con musica dal vivo e coreografie d’effetto. Un mix di eleganza, tecnologia e arte per rendere unica ogni serata.</p>
+    </div>
+  </section>
+
+  <!-- CIRCUS SHOW -->
+  <section id="circus">
+    <div class="wrap">
+      <h2>Circus Show</h2>
+      <div class="card-img">
+        <!-- Performer circensi, fuoco e luci -->
+        <img src="https://images.unsplash.com/photo-1540039155733-5bb30b53aa14?w=1600&q=80&auto=format&fit=crop" alt="Circus Show – performer circensi con fuoco e luci sceniche">
+      </div>
+      <p>Acrobazie, fuoco e illusioni visive per un intrattenimento spettacolare. ShowBiz One porta sul palco energia e creatività senza limiti.</p>
+    </div>
+  </section>
+
+  <!-- FOOTER -->
+  <footer>
+    <div class="wrap">
+      <h2>Contatti</h2>
+      <p>📞 <a href="https://wa.me/393792603685" target="_blank" rel="noopener">+39 379 260 3685</a></p>
+      <p>📧 <a href="mailto:info@showbizone.it">info@showbizone.it</a></p>
+      <p>© 2025 ShowBiz One – Tutti i diritti riservati</p>
+    </div>
+  </footer>
+
+  <!-- WhatsApp floating -->
+  <a class="wa" href="https://wa.me/393792603685" target="_blank" rel="noopener" aria-label="Chat WhatsApp">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="">
+  </a>
+
+  <noscript><div style="text-align:center;color:#bbb;padding:12px">Per la migliore esperienza abilita JavaScript.</div></noscript>
+</body>
+</html>
