--- a/index.html
+++ b/index.html
@@ -139,12 +139,12 @@
       <h2>Dinner Show</h2>
       <div class="card-img">
         <!-- Cantante + ballerini, luci viola/oro -->
-        <img src="https://images.unsplash.com/photo-1518544801976-3e1883f0e419?w=1600&q=80&auto=format&fit=crop" alt="Dinner Show – cantante e ballerini su palco con luci viola e oro">
+        <img src="https://images.pexels.com/photos/210922/pexels-photo-210922.jpeg?auto=compress&cs=tinysrgb&w=1600" alt="Dinner Show – cantante e ballerini su palco con luci viola e oro">
       </div>
       <p>Spettacoli eleganti con musica dal vivo e coreografie d’effetto. Un mix di eleganza, tecnologia e arte per rendere unica ogni serata.</p>
     </div>
   </section>
-
+  
   <!-- CIRCUS SHOW -->
   <section id="circus">
     <div class="wrap">
