--- a/index.html
+++ b/index.html
@@ -133,29 +133,27 @@
     </div>
   </section>
 
-  <!-- DINNER SHOW -->
-  <section id="dinner">
-    <div class="wrap">
-      <h2>Dinner Show</h2>
-      <div class="card-img">
-        <!-- Cantante + ballerini, luci viola/oro -->
-        <img src="https://images.pexels.com/photos/210922/pexels-photo-210922.jpeg?auto=compress&cs=tinysrgb&w=1600" alt="Dinner Show – cantante e ballerini su palco con luci viola e oro">
-      </div>
-      <p>Spettacoli eleganti con musica dal vivo e coreografie d’effetto. Un mix di eleganza, tecnologia e arte per rendere unica ogni serata.</p>
-    </div>
-  </section>
+  <!-- Dinner Show -->
+<section class="section">
+  <h2>Dinner Show</h2>
+  <div class="wrap">
+    <img src="https://files.oaiusercontent.com/file-78a9ff36-8e5d-44e5-b0c4-989448d1983f" 
+         alt="Dinner Show con ballerini e luci viola" 
+         style="max-width:100%;border-radius:12px;box-shadow:0 0 15px rgba(176,102,255,0.4);">
+    <p>Spettacoli eleganti con musica dal vivo e coreografie d’effetto. Un mix di eleganza, tecnologia e arte per rendere unica ogni serata.</p>
+  </div>
+</section>
   
-  <!-- CIRCUS SHOW -->
-  <section id="circus">
-    <div class="wrap">
-      <h2>Circus Show</h2>
-      <div class="card-img">
-        <!-- Performer circensi, fuoco e luci -->
-        <img src="https://images.unsplash.com/photo-1540039155733-5bb30b53aa14?w=1600&q=80&auto=format&fit=crop" alt="Circus Show – performer circensi con fuoco e luci sceniche">
-      </div>
-      <p>Acrobazie, fuoco e illusioni visive per un intrattenimento spettacolare. ShowBiz One porta sul palco energia e creatività senza limiti.</p>
-    </div>
-  </section>
+  <!-- Circus Show -->
+<section class="section">
+  <h2>Circus Show</h2>
+  <div class="wrap">
+    <img src="https://files.oaiusercontent.com/file-47b4ff68-4b53-4a46-8ec6-b927b0d8f08e" 
+         alt="Circus Show con performer e cerchi luminosi" 
+         style="max-width:100%;border-radius:12px;box-shadow:0 0 15px rgba(176,102,255,0.4);">
+    <p>Acrobazie, fuoco e illusioni visive per un intrattenimento spettacolare. ShowBiz One porta sul palco energia e creatività senza limiti.</p>
+  </div>
+</section>
 
   <!-- FOOTER -->
   <footer>
