--- a/index.html
+++ b/index.html
@@ -137,8 +137,7 @@
 <section class="section">
   <h2>Dinner Show</h2>
   <div class="wrap">
-    <img src="https://files.oaiusercontent.com/file-78a9ff36-8e5d-44e5-b0c4-989448d1983f" 
-         alt="Dinner Show con ballerini e luci viola" 
+    <img alt="Dinner Show con ballerini e luci viola" 
          style="max-width:100%;border-radius:12px;box-shadow:0 0 15px rgba(176,102,255,0.4);">
     <p>Spettacoli eleganti con musica dal vivo e coreografie d’effetto. Un mix di eleganza, tecnologia e arte per rendere unica ogni serata.</p>
   </div>
@@ -148,8 +147,7 @@
 <section class="section">
   <h2>Circus Show</h2>
   <div class="wrap">
-    <img src="https://files.oaiusercontent.com/file-47b4ff68-4b53-4a46-8ec6-b927b0d8f08e" 
-         alt="Circus Show con performer e cerchi luminosi" 
+    <img alt="Circus Show con performer e cerchi luminosi" 
          style="max-width:100%;border-radius:12px;box-shadow:0 0 15px rgba(176,102,255,0.4);">
     <p>Acrobazie, fuoco e illusioni visive per un intrattenimento spettacolare. ShowBiz One porta sul palco energia e creatività senza limiti.</p>
   </div>
