--- a/index.html
+++ b/index.html
@@ -137,18 +137,17 @@
 <section class="section">
   <h2>Dinner Show</h2>
   <div class="wrap">
-    <img alt="Dinner Show con ballerini e luci viola" 
-         style="max-width:100%;border-radius:12px;box-shadow:0 0 15px rgba(176,102,255,0.4);">
-    <p>Spettacoli eleganti con musica dal vivo e coreografie d’effetto. Un mix di eleganza, tecnologia e arte per rendere unica ogni serata.</p>
-  </div>
-</section>
+    <img src="https://raw.githubusercontent.com/Kikkodancer/ShowBizOne-/refs/heads/main/IMG-20250612-WA0036.jpg"
+     alt="Dinner Show con ballerini e luci viola"
+     style="max-width:100%;border-radius:12px;box-shadow:0 0 15px rgba(176,102,255,0.4);">
   
   <!-- Circus Show -->
 <section class="section">
   <h2>Circus Show</h2>
   <div class="wrap">
-    <img alt="Circus Show con performer e cerchi luminosi" 
-         style="max-width:100%;border-radius:12px;box-shadow:0 0 15px rgba(176,102,255,0.4);">
+    <img src="https://raw.githubusercontent.com/Kikkodancer/ShowBizOne-/refs/heads/main/IMG_20250831_224847.jpg"
+     alt="Circus Show con performer e cerchi luminosi"
+     style="max-width:100%;border-radius:12px;box-shadow:0 0 15px rgba(176,102,255,0.4);">
     <p>Acrobazie, fuoco e illusioni visive per un intrattenimento spettacolare. ShowBiz One porta sul palco energia e creatività senza limiti.</p>
   </div>
 </section>
