--- a/index.html
+++ b/index.html
@@ -1,173 +1,92 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ShowBiz One</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Poppins', sans-serif;
-      background-color: #000;
-      color: #fff;
-      text-align: center;
-    }
-
-    h1, h2, h3 {
-      color: #b266ff;
-      text-transform: uppercase;
-    }
-
-    section {
-      padding: 50px 20px;
-    }
-
-    .hero {
-      background: radial-gradient(circle at center, #2b004f, #000);
-      padding: 100px 20px;
-    }
-
-    .hero h1 {
-      font-size: 2em;
-      letter-spacing: 1px;
-      margin-bottom: 10px;
-    }
-
-    .hero p {
-      max-width: 700px;
-      margin: 0 auto 20px;
-      font-size: 1em;
-      line-height: 1.6;
-    }
-
-    .whatsapp-btn {
-      background-color: #25D366;
-      color: white;
-      padding: 15px 30px;
-      border: none;
-      border-radius: 8px;
-      font-size: 1.1em;
-      cursor: pointer;
-      text-decoration: none;
-      display: inline-block;
-      margin-top: 10px;
-    }
-
-    .services {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 20px;
-      margin-top: 40px;
-    }
-
-    .service-card {
-      background-color: #111;
-      border-radius: 12px;
-      padding: 30px 20px;
-      width: 250px;
-      box-shadow: 0 0 10px rgba(178, 102, 255, 0.3);
-    }
-
-    .service-card h3 {
-      margin-top: 15px;
-    }
-
-    .show-pair {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      align-items: stretch;
-      gap: 20px;
-      margin-top: 40px;
-    }
-
-    .show {
-      background-color: #111;
-      border-radius: 12px;
-      flex: 1;
-      min-width: 300px;
-      max-width: 500px;
-      box-shadow: 0 0 15px rgba(178, 102, 255, 0.4);
-      padding: 20px;
-    }
-
-    .show img {
-      width: 100%;
-      border-radius: 12px;
-      margin-bottom: 15px;
-    }
-
-    footer {
-      background-color: #0a0a0a;
-      padding: 30px 20px;
-      color: #ccc;
-      font-size: 0.9em;
-    }
-
-    footer a {
-      color: #b266ff;
-      text-decoration: none;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ShowBiz One - Produzioni Artistiche & Spettacoli</title>
+    <link rel="stylesheet" href="styles.css"> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
-
 <body>
 
-  <section class="hero">
-    <h1>SHOWBIZ ONE</h1>
-    <p>Creiamo emozioni attraverso tecnologia, arte e spettacolo.<br>
-    ShowBiz One trasforma ogni evento in un’esperienza scenica, con audio, luci, video ed effetti speciali di livello internazionale.</p>
-    <p>Un team di professionisti del mondo dello spettacolo che unisce competenza tecnica e creatività artistica. Dalla progettazione alla regia, realizziamo eventi e produzioni con stile, precisione e passione.</p>
-    <a href="https://wa.me/393792603685" class="whatsapp-btn">WhatsApp</a>
-  </section>
+    <header class="hero-section">
+        <div class="content-wrapper">
+            <nav class="main-nav">
+                <div class="logo">
+                    <img src="logo-showbizone.png" alt="ShowBiz One Logo"> 
+                </div>
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#services">Servizi</a></li>
+                    <li><a href="#effects">Effetti Speciali</a></li>
+                    <li><a href="#shows">Show</a></li>
+                    <li><a href="#contact">Contatti</a></li>
+                </ul>
+            </nav>
+            
+            <h1 class="main-title">PRODUZIONI ARTISTICHE & SPETTACOLI</h1>
+            <p class="hero-description">
+                Creiamo emozioni attraverso tecnologia, arte e spettacolo. Un team di professionisti del mondo dello spettacolo che unisce competenza tecnica e creatività artistica. Dalla progettazione alla regia, realizziamo eventi e produzioni con stile, precisione e passione.
+            </p>
+            
+            <a href="https://wa.me/393331234567" class="cta-whatsapp" target="_blank">
+                <i class="fab fa-whatsapp"></i> Chatta con Noi
+            </a>
+        </div>
+    </header>
 
-  <section>
-    <h2>Effetti Speciali</h2>
-    <p>Diamo potenza e adrenalina ai tuoi eventi con effetti speciali professionali: CO₂, fiamme, coriandoli, pyro indoor, geyser e special FX per show ad alto impatto.</p>
-    <img src="https://raw.githubusercontent.com/kikkodancer/ShowBizOne-/main/effects.jpg" alt="Effetti speciali" style="max-width:100%;border-radius:12px;margin-top:20px;">
-  </section>
+    <section id="services" class="services-icons">
+        <div class="icon-item">
+            <i class="fas fa-volume-up"></i> 
+            <h3>AUDIO PROFESSIONALE</h3>
+            <p>Impianti audio di alta qualità per eventi, concerti e spettacoli live.</p>
+        </div>
+        <div class="icon-item">
+            <i class="fas fa-lightbulb"></i>
+            <h3>LUCI E SCENOGRAFIE</h3>
+            <p>Illuminazione dinamica e scenografie luminose per creare atmosfere uniche.</p>
+        </div>
+        <div class="icon-item">
+            <i class="fas fa-video"></i>
+            <h3>VIDEO E PROIEZIONI</h3>
+            <p>Schermi LED e proiezioni video per eventi indoor e outdoor.</p>
+        </div>
+    </section>
 
-  <section>
-    <h2>Service Audio · Luci · Video</h2>
-    <div class="services">
-      <div class="service-card">
-        <h3>Audio Professionale</h3>
-        <p>Impianti audio di alta qualità per eventi, concerti e spettacoli live.</p>
-      </div>
-      <div class="service-card">
-        <h3>Luci e Scenografie</h3>
-        <p>Illuminazione dinamica e scenografie luminose per creare atmosfere uniche.</p>
-      </div>
-      <div class="service-card">
-        <h3>Video e Proiezioni</h3>
-        <p>Schermi LED e proiezioni video per eventi indoor e outdoor.</p>
-      </div>
-    </div>
-  </section>
+    <section id="effects" class="effects-section">
+        <div class="overlay">
+            <h2>EFFETTI SPECIALI</h2>
+            <p>
+                Diamo potenza e adrenalina ai tuoi eventi con effetti speciali professionali. CO2, fiamme, coriandoli, pyro indoor, geyser e special FX per show ad alto impatto.
+            </p>
+            <a href="#link-alla-pagina-effetti-speciali" class="cta-button">Scopri di più</a>
+        </div>
+    </section>
 
-  <section>
-    <div class="show-pair">
-      <div class="show">
-        <h2>Dinner Show</h2>
-        <img src="https://raw.githubusercontent.com/kikkodancer/ShowBizOne-/main/IMG-20250612-WA0000.jpg" alt="Dinner Show con ballerini e luci viola">
-        <p>Spettacoli eleganti con musica dal vivo e coreografie d’effetto. Un mix di eleganza, tecnologia e arte per rendere unica ogni serata.</p>
-      </div>
+    <section id="shows" class="dinner-show-section">
+        <div class="content-wrapper">
+            <h2>DINNER SHOW</h2>
+            <p>
+                Spettacoli eleganti con musica dal vivo e coreografie d'effetto. Un mix di eleganza, tecnologia e arte per rendere unica ogni serata.
+            </p>
+            <div class="dinner-image-container">
+                </div>
+        </div>
+    </section>
 
-      <div class="show">
-        <h2>Circus Show</h2>
-        <img src="https://raw.githubusercontent.com/kikkodancer/ShowBizOne-/main/IMG_20250831_224853.jpg" alt="Circus Show con performer e cerchi luminosi">
-        <p>Acrobazie, fuoco e illusioni visive per un intrattenimento spettacolare. ShowBiz One porta sul palco energia e creatività senza limiti.</p>
-      </div>
-    </div>
-  </section>
-
-  <footer>
-    <h3>Contatti</h3>
-    <p>📞 +39 379 260 3685<br>
-    ✉️ <a href="mailto:info@showbizone.it">info@showbizone.it</a></p>
-    <p>© 2025 ShowBiz One – Tutti i diritti riservati</p>
-  </footer>
+    <footer id="contact">
+        <div class="content-wrapper">
+            <div class="footer-info">
+                <p>Contatti: <a href="mailto:info@showbizone.it">info@showbizone.it</a> | Tel: +39 333 123 4567</p>
+                <p>&copy; 2024 ShowBiz One - Tutti i diritti riservati.</p>
+            </div>
+            <div class="social-links">
+                <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="#" target="_blank"><i class="fab fa-youtube"></i></a>
+            </div>
+        </div>
+    </footer>
 
 </body>
 </html>
