--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="content-wrapper">
             <nav class="main-nav">
                 <div class="logo">
-                    <img src="logo-showbizone.png" alt="ShowBiz One Logo"> 
+                    <span class="logo-text">ShowBiz One</span> 
                 </div>
                 <ul>
                     <li><a href="#home">Home</a></li>
