--- a/index.html
+++ b/index.html
@@ -1,93 +1,114 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ShowBiz One - Produzioni Artistiche & Spettacoli</title>
-    <link rel="stylesheet" href="styles.css"> 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>ShowBiz One | Servizi per lo Spettacolo</title>
+
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet" />
+
+  <link rel="stylesheet" href="styles.css" />
+  <meta name="theme-color" content="#9C4DFF" />
+  <meta name="description" content="ShowBiz One: Effetti Speciali, Service Audio Luci Video, Dinner & Circus Show." />
 </head>
 <body>
 
-    <header class="hero-section">
-        <div class="content-wrapper">
-            <nav class="main-nav">
-                <div class="logo">
-                    <span class="logo-text">ShowBiz One</span> 
-                </div>
-                <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#services">Servizi</a></li>
-                    <li><a href="#effects">Effetti Speciali</a></li>
-                    <li><a href="#shows">Show</a></li>
-                    <li><a href="#contact">Contatti</a></li>
-                </ul>
-            </nav>
-            
-            <h1 class="main-title">PRODUZIONI ARTISTICHE & SPETTACOLI</h1>
-            <p class="hero-description">
-                Creiamo emozioni attraverso tecnologia, arte e spettacolo. Un team di professionisti del mondo dello spettacolo che unisce competenza tecnica e creatività artistica. Dalla progettazione alla regia, realizziamo eventi e produzioni con stile, precisione e passione.
-            </p>
-            
-            <a href="https://wa.me/393331234567" class="cta-whatsapp" target="_blank">
-                <i class="fab fa-whatsapp"></i> Chatta con Noi
-            </a>
-        </div>
-    </header>
+  <!-- HERO -->
+  <header class="hero">
+    <div class="wrap">
+      <h1 class="brand">SHOWBIZ ONE</h1>
+      <p class="lead">
+        Creiamo emozioni attraverso tecnologia, arte e spettacolo.
+        ShowBiz One trasforma ogni evento in un’esperienza scenica, con audio, luci,
+        video ed effetti speciali di livello internazionale.
+      </p>
+      <p class="sub">
+        Un team di professionisti del mondo dello spettacolo che unisce competenza tecnica e creatività artistica.
+        Dalla progettazione alla regia, realizziamo eventi e produzioni con stile, precisione e passione.
+      </p>
+      <a class="btn" href="https://wa.me/393792603685" target="_blank" rel="noopener">WhatsApp</a>
+    </div>
+  </header>
 
-    <section id="services" class="services-icons">
-        <div class="icon-item">
-            <i class="fas fa-volume-up"></i> 
-            <h3>AUDIO PROFESSIONALE</h3>
-            <p>Impianti audio di alta qualità per eventi, concerti e spettacoli live.</p>
-        </div>
-        <div class="icon-item">
-            <i class="fas fa-lightbulb"></i>
-            <h3>LUCI E SCENOGRAFIE</h3>
-            <p>Illuminazione dinamica e scenografie luminose per creare atmosfere uniche.</p>
-        </div>
-        <div class="icon-item">
-            <i class="fas fa-video"></i>
-            <h3>VIDEO E PROIEZIONI</h3>
-            <p>Schermi LED e proiezioni video per eventi indoor e outdoor.</p>
-        </div>
-    </section>
+  <!-- EFFETTI SPECIALI -->
+  <section class="section highlight" id="fx">
+    <div class="wrap">
+      <h2>Effetti Speciali</h2>
+      <div class="img-card">
+        <!-- Sostituisci con una tua immagine se vuoi -->
+        <img src="https://images.unsplash.com/photo-1535448033527-92fd0a8d4e2a?w=1600&q=80&auto=format&fit=crop"
+             alt="Effetti speciali: CO₂, fuoco e luci" />
+      </div>
+      <p class="text">
+        Diamo potenza e adrenalina ai tuoi eventi con effetti speciali professionali:
+        CO₂, fiamme, coriandoli, pyro indoor, geyser e special FX per show ad alto impatto.
+      </p>
+    </div>
+  </section>
 
-    <section id="effects" class="effects-section">
-        <div class="overlay">
-            <h2>EFFETTI SPECIALI</h2>
-            <p>
-                Diamo potenza e adrenalina ai tuoi eventi con effetti speciali professionali. CO2, fiamme, coriandoli, pyro indoor, geyser e special FX per show ad alto impatto.
-            </p>
-            <a href="#link-alla-pagina-effetti-speciali" class="cta-button">Scopri di più</a>
-        </div>
-    </section>
+  <!-- SERVICE AUDIO / LUCI / VIDEO -->
+  <section class="section" id="service">
+    <div class="wrap">
+      <h2>Service Audio · Luci · Video</h2>
+      <div class="grid-3">
+        <article class="card">
+          <h3>Audio Professionale</h3>
+          <p>Impianti audio di alta qualità per eventi, concerti e spettacoli live.</p>
+        </article>
+        <article class="card">
+          <h3>Luci e Scenografie</h3>
+          <p>Illuminazione dinamica e scenografie luminose per creare atmosfere uniche.</p>
+        </article>
+        <article class="card">
+          <h3>Video e Proiezioni</h3>
+          <p>Schermi LED e proiezioni per eventi indoor e outdoor.</p>
+        </article>
+      </div>
+    </div>
+  </section>
 
-    <section id="shows" class="dinner-show-section">
-        <div class="content-wrapper">
-            <h2>DINNER SHOW</h2>
-            <p>
-                Spettacoli eleganti con musica dal vivo e coreografie d'effetto. Un mix di eleganza, tecnologia e arte per rendere unica ogni serata.
-            </p>
-            <div class="dinner-image-container">
-                </div>
-        </div>
-    </section>
+  <!-- DINNER & CIRCUS SHOW (stessa sezione) -->
+  <section class="section" id="shows">
+    <div class="wrap">
+      <h2>Dinner & Circus Show</h2>
 
-    <footer id="contact">
-        <div class="content-wrapper">
-            <div class="footer-info">
-                <p>Contatti: <a href="mailto:info@showbizone.it">info@showbizone.it</a> | Tel: +39 333 123 4567</p>
-                <p>&copy; 2024 ShowBiz One - Tutti i diritti riservati.</p>
-            </div>
-            <div class="social-links">
-                <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
-                <a href="#" target="_blank"><i class="fab fa-youtube"></i></a>
-            </div>
-        </div>
-    </footer>
+      <div class="pair">
+        <!-- DINNER SHOW -->
+        <figure class="show-box">
+          <!-- ⬇️ Sostituisci il nome file con il tuo nel repo -->
+          <img src="./IMG-20250612-WA0000.jpg" alt="Dinner Show: ballerini con luci viola" />
+          <figcaption>
+            Spettacoli eleganti con musica dal vivo e coreografie d’effetto.
+          </figcaption>
+        </figure>
+
+        <!-- CIRCUS SHOW -->
+        <figure class="show-box">
+          <!-- ⬇️ Sostituisci il nome file con il tuo nel repo -->
+          <img src="./IMG_20250831_224853.jpg" alt="Circus Show: performer con cerchi luminosi" />
+          <figcaption>
+            Acrobazie, fuoco e illusioni visive per un intrattenimento spettacolare.
+          </figcaption>
+        </figure>
+      </div>
+
+      <p class="text center">
+        Live performances and artistic shows that turn every event into a unique experience.
+      </p>
+    </div>
+  </section>
+
+  <!-- FOOTER -->
+  <footer class="footer">
+    <div class="wrap">
+      <h3>Contatti</h3>
+      <p>📞 <a href="https://wa.me/393792603685" target="_blank" rel="noopener">+39 379 260 3685</a></p>
+      <p>📧 <a href="mailto:info@showbizone.it">info@showbizone.it</a></p>
+      <p class="copy">© 2025 ShowBiz One — Tutti i diritti riservati</p>
+    </div>
+  </footer>
 
 </body>
 </html>
-
