--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <!-- HERO -->
   <header class="hero">
     <div class="wrap">
-      <h1 class="brand">SHOWBIZ ONE</h1>
+      <h1 class="brand">ShowBiz <span>One</span></h1>
       <p class="lead">
         Creiamo emozioni attraverso tecnologia, arte e spettacolo.
         ShowBiz One trasforma ogni evento in un’esperienza scenica, con audio, luci,
