--- a/index.html
+++ b/index.html
@@ -33,20 +33,21 @@
   </header>
 
   <!-- EFFETTI SPECIALI -->
-  <section class="section highlight" id="fx">
-    <div class="wrap">
-      <h2>Effetti Speciali</h2>
-      <div class="img-card">
-        <!-- Sostituisci con una tua immagine se vuoi -->
-        <img src="https://images.unsplash.com/photo-1535448033527-92fd0a8d4e2a?w=1600&q=80&auto=format&fit=crop"
-             alt="Effetti speciali: CO₂, fuoco e luci" />
-      </div>
-      <p class="text">
-        Diamo potenza e adrenalina ai tuoi eventi con effetti speciali professionali:
-        CO₂, fiamme, coriandoli, pyro indoor, geyser e special FX per show ad alto impatto.
-      </p>
+<section class="section highlight" id="fx">
+  <div class="wrap">
+    <h2>Effetti Speciali</h2>
+    <p class="text">
+      Diamo potenza e adrenalina ai tuoi eventi con effetti speciali professionali:
+      CO₂, fiamme, coriandoli, pyro indoor, geyser e special FX per show ad alto impatto.
+    </p>
+
+    <!-- 🔥 Immagine grande sotto -->
+    <div class="img-card big-fx">
+      <img src="https://images.unsplash.com/photo-1582719478173-2f1b6d9a689d?auto=format&fit=crop&w=1600&q=80"
+           alt="Spettacolo con fiamme e luci viola - Effetti Speciali ShowBiz One" />
     </div>
-  </section>
+  </div>
+</section>
   
   <!-- DINNER & CIRCUS SHOW (stessa sezione) -->
   <section class="section" id="shows">
