--- a/index.html
+++ b/index.html
@@ -36,16 +36,20 @@
 <section class="section highlight" id="fx">
   <div class="wrap">
     <h2>Effetti Speciali</h2>
-    <p class="text">
+  </div>
+
+  <!-- 🔥 Immagine full-width da bordo a bordo -->
+  <div class="fx-full">
+    <img
+      src="https://images.unsplash.com/photo-1582719478173-2f1b6d9a689d?auto=format&fit=crop&w=1600&q=80"
+      alt="Spettacolo con fiamme, CO₂ e luci viola - Effetti Speciali ShowBiz One" />
+  </div>
+
+  <div class="wrap">
+    <p class="text" style="margin-top:14px">
       Diamo potenza e adrenalina ai tuoi eventi con effetti speciali professionali:
       CO₂, fiamme, coriandoli, pyro indoor, geyser e special FX per show ad alto impatto.
     </p>
-
-    <!-- 🔥 Immagine grande sotto -->
-    <div class="img-card big-fx">
-      <img src="https://images.unsplash.com/photo-1582719478173-2f1b6d9a689d?auto=format&fit=crop&w=1600&q=80"
-           alt="Spettacolo con fiamme e luci viola - Effetti Speciali ShowBiz One" />
-    </div>
   </div>
 </section>
   
