--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
     <h2>Effetti Speciali</h2>
   </div>
 
-  <!-- 🔥 Immagine full-width da bordo a bordo -->
+  <!-- 🔥 Immagine full-width bordo a bordo -->
   <div class="fx-full">
     <img
-      src="https://images.unsplash.com/photo-1582719478173-2f1b6d9a689d?auto=format&fit=crop&w=1600&q=80"
-      alt="Spettacolo con fiamme, CO₂ e luci viola - Effetti Speciali ShowBiz One" />
+      src="IMG_20250831_224851.jpg"
+      alt="ShowBiz One - Effetti speciali con fuoco, fiamme e luci laser" />
   </div>
 
   <div class="wrap">
