--- a/index.html
+++ b/index.html
@@ -40,13 +40,8 @@
 
   <!-- 🔥 Immagine full-width bordo a bordo -->
   <div class="fx-full">
-    <img
-      src="IMG_20250831_224851.jpg"
-      alt="ShowBiz One - Effetti speciali con fuoco, fiamme e luci laser" />
-  </div>
-
-  <div class="wrap">
-    <p class="text" style="margin-top:14px">
+    <img src="https://raw.githubusercontent.com/kikkodancer/ShowBizOne-/main/IMG_20251030_160554.jpg" 
+     alt="ShowBiz One - Effetti speciali con fiamme e laser" />
       Diamo potenza e adrenalina ai tuoi eventi con effetti speciali professionali:
       CO₂, fiamme, coriandoli, pyro indoor, geyser e special FX per show ad alto impatto.
     </p>
