--- a/index.html
+++ b/index.html
@@ -33,18 +33,19 @@
   </header>
 
   <!-- EFFETTI SPECIALI -->
+<!-- EFFETTI SPECIALI -->
 <section class="section highlight" id="fx">
-  <div class="wrap">
-    <h2>Effetti Speciali</h2>
-  </div>
-
-  <!-- 🔥 Immagine full-width bordo a bordo -->
   <div class="fx-full">
-    <img src="https://raw.githubusercontent.com/kikkodancer/ShowBizOne-/main/IMG_20251030_160554.jpg" 
-     alt="ShowBiz One - Effetti speciali con fiamme e laser" />
-      Diamo potenza e adrenalina ai tuoi eventi con effetti speciali professionali:
-      CO₂, fiamme, coriandoli, pyro indoor, geyser e special FX per show ad alto impatto.
-    </p>
+    <img 
+      src="https://raw.githubusercontent.com/kikkodancer/ShowBizOne-/main/IMG_20251030_160554.jpg" 
+      alt="ShowBiz One - Effetti speciali con fiamme e laser" />
+    <div class="fx-overlay">
+      <h2>EFFETTI SPECIALI</h2>
+      <p>
+        Diamo potenza e adrenalina ai tuoi eventi con effetti speciali professionali:
+        CO₂, fiamme, coriandoli, pyro indoor, geyser e special FX per show ad alto impatto.
+      </p>
+    </div>
   </div>
 </section>
   
