--- a/index.html
+++ b/index.html
@@ -65,15 +65,20 @@
         </figure>
 
         <!-- CIRCUS SHOW -->
-        <figure class="show-box">
-          <!-- ⬇️ Sostituisci il nome file con il tuo nel repo -->
-          <img src="./IMG_20250831_224853.jpg" alt="Circus Show: performer con cerchi luminosi" />
-          <figcaption>
-            Acrobazie, fuoco e illusioni visive per un intrattenimento spettacolare.
-          </figcaption>
-        </figure>
-      </div>
-
+<section class="circus-section">
+  <div class="circus-image">
+    <img 
+      src="https://raw.githubusercontent.com/kikkodancer/ShowBizOne-/main/IMG_CIRCUS.jpg" 
+      alt="ShowBiz One - Performer Circus Show" />
+    <div class="circus-text">
+      <h2>CIRCUS SHOW</h2>
+      <p>
+        Acrobazie, fuoco e illusioni visive per un intrattenimento spettacolare. 
+        ShowBizOne porta sul palco energia, eleganza e creatività senza limiti.
+      </p>
+    </div>
+  </div>
+</section>
       <p class="text center">
         Live performances and artistic shows that turn every event into a unique experience.
       </p>
