--- a/index.html
+++ b/index.html
@@ -98,6 +98,13 @@
       </div>
     </div>
 </section>
+
+  <!-- CTA: Richiedi il tuo spettacolo -->
+<div class="cta-container">
+  <a href="https://wa.me/393792603685" target="_blank" class="cta-button">
+    🎭 Richiedi il tuo spettacolo
+  </a>
+</div>
   
   <!-- FOOTER -->
   <footer class="footer">
