--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 
   <!-- CTA: Richiedi il tuo spettacolo -->
 <div class="cta-container">
+  <p class="cta-text">Prenota ora il tuo evento con <strong>ShowBizOne</strong></p>
   <a href="https://wa.me/393792603685" target="_blank" class="cta-button">
     🎭 Richiedi il tuo spettacolo
   </a>
