--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div class="pair">
         <!-- DINNER SHOW -->
         <figure class="show-box">
-          <img src="./IMG-20250612-WA0000.jpg" alt="Dinner Show: ballerini con luci viola" />
+          <img src="https://raw.githubusercontent.com/Kikkodancer/ShowBizOne-/refs/heads/main/dinner-show-spettacolo%20(1).jpg
           <figcaption>
             Spettacoli eleganti con musica dal vivo e coreografie d’effetto.
           </figcaption>
