--- a/index.html
+++ b/index.html
@@ -52,30 +52,29 @@
 
       <div class="pair">
         <!-- DINNER SHOW -->
-        <figure class="show-box">
-          <img src="https://raw.githubusercontent.com/Kikkodancer/ShowBizOne-/refs/heads/main/dinner-show-spettacolo%20(1).jpg
-          <figcaption>
-            Spettacoli eleganti con musica dal vivo e coreografie d’effetto.
-          </figcaption>
-        </figure>
-
-        <!-- CIRCUS SHOW -->
-<section class="circus-section">
-  <div class="circus-image">
-    <img 
-      src="https://raw.githubusercontent.com/Kikkodancer/ShowBizOne-/refs/heads/main/gettyimages-471730013-612x612.jpg" 
-      alt="ShowBiz One - Performer Circus Show" />
-    <div class="circus-text">
-      <h2>CIRCUS SHOW</h2>
+        <section class="shows">
+  <div class="show-card">
+    <img src="IMG_20250831_224836.jpg" alt="Dinner Show – ballerini con luci viola">
+    <div class="show-overlay">
+      <h2>Dinner Show</h2>
       <p>
-        Acrobazie, fuoco e illusioni visive per un intrattenimento spettacolare. 
+        Spettacoli eleganti con musica dal vivo e coreografie d’effetto.<br>
+        Un mix di eleganza, tecnologia e arte per rendere unica ogni serata.
+      </p>
+    </div>
+  </div>
+
+  <div class="show-card">
+    <img src="1000126968.jpg" alt="Circus Show – performer con cerchio aereo">
+    <div class="show-overlay">
+      <h2>Circus Show</h2>
+      <p>
+        Acrobazie, fuoco e illusioni visive per un intrattenimento spettacolare.<br>
         ShowBizOne porta sul palco energia, eleganza e creatività senza limiti.
       </p>
     </div>
   </div>
 </section>
-    </div>
-  </section>
 <section class="section" id="service">
     <div class="wrap">
           <h3>Audio Professionale</h3>
