--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   </div>
 
   <div class="show-card">
-    <img src="1000126968.jpg" alt="Circus Show – performer con cerchio aereo">
+    <img src="gettyimages-471730013-612x612.jpg
     <div class="show-overlay">
       <h2>Circus Show</h2>
       <p>
