--- a/index.html
+++ b/index.html
@@ -1,113 +1,159 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>ShowBiz One | Servizi per lo Spettacolo</title>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>ShowBiz One | Servizi per lo Spettacolo</title>
+<meta name="theme-color" content="#0a0a0a" />
+<link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700;800&display=swap" rel="stylesheet" />
 
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet" />
+<style>
+:root{
+  --bg:#000; --txt:#fff; --muted:#cfcfcf;
+  --violet:#b266ff; --violet2:#e0b3ff; --card:rgba(255,255,255,.06);
+  --border:rgba(178,102,255,.25);
+}
+*{box-sizing:border-box} html,body{margin:0;background:var(--bg);color:var(--txt);font-family:Poppins,system-ui,Segoe UI,Roboto,Arial,sans-serif}
+a{text-decoration:none;color:var(--violet)}
+img{max-width:100%;display:block}
 
-  <link rel="stylesheet" href="styles.css" />
-  <meta name="theme-color" content="#9C4DFF" />
-  <meta name="description" content="ShowBiz One: Effetti Speciali, Service Audio Luci Video, Dinner & Circus Show." />
+.wrap{max-width:1100px;margin:0 auto;padding:0 18px}
+.section{padding:56px 0}
+
+/* HERO */
+.hero{padding:86px 0 48px;background: radial-gradient(70% 60% at 50% 0%, rgba(178,102,255,.22), rgba(0,0,0,0) 60%), #000; text-align:center}
+.brand{font-size:3.2rem;letter-spacing:.06em;font-weight:800;color:#fff;margin:0 0 16px;
+  text-shadow:0 0 18px rgba(255,255,255,.7),0 0 40px rgba(178,102,255,.55)}
+.brand span{color:var(--violet);text-shadow:0 0 20px var(--violet),0 0 50px var(--violet2)}
+.hero .lead,.hero .sub{max-width:760px;margin:0 auto 10px;line-height:1.6;color:#efefef;text-shadow:0 0 6px rgba(255,255,255,.18)}
+/* nessuna animazione sulla descrizione */
+
+/* EFFETTI SPECIALI full-width con testo sopra */
+.fx-section{position:relative;margin:0}
+.fx-image{position:relative;overflow:hidden}
+.fx-image img{width:100%;height:auto;object-fit:cover;filter:brightness(.45)}
+.fx-text{position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);text-align:center;width:92%;max-width:900px;color:#fff}
+.fx-text h2{font-size:1.7rem;margin:0 0 10px;text-transform:uppercase;font-weight:800;
+  text-shadow:0 0 14px var(--violet),0 0 28px var(--violet2)}
+.fx-text p{margin:0;font-size:1rem;line-height:1.6;text-shadow:0 0 8px rgba(255,255,255,.75)}
+
+/* DINNER & CIRCUS (affiancati, responsive) */
+.shows{display:flex;gap:20px;flex-wrap:wrap;justify-content:center;padding:42px 18px}
+.show-card{position:relative;flex:1 1 360px;max-width:520px;border-radius:16px;overflow:hidden;
+  background:var(--card);border:1px solid var(--border);box-shadow:0 10px 28px rgba(0,0,0,.35)}
+.show-card img{width:100%;height:420px;object-fit:cover;filter:brightness(.5)}
+.show-overlay{position:absolute;inset:auto 0 0 0;padding:20px;background:linear-gradient(180deg,rgba(0,0,0,0) 0%, rgba(0,0,0,.65) 40%, rgba(0,0,0,.85) 100%);text-align:center}
+.show-overlay h2{margin:0 0 8px;font-size:1.4rem;text-transform:uppercase;color:#fff;
+  text-shadow:0 0 12px var(--violet),0 0 24px var(--violet2)}
+.show-overlay p{margin:0;color:#eee;line-height:1.55}
+
+/* SERVICE */
+#service h2{color:var(--violet);font-size:1.6rem;margin:0 0 14px}
+.grid-3{display:grid;gap:16px}
+.card{background:var(--card);border:1px solid var(--border);border-radius:14px;padding:20px;text-align:center}
+.card h3{margin:0 0 8px}
+.card p{color:var(--muted)}
+
+/* CTA */
+.cta-container{text-align:center;margin:60px 0}
+.cta-text{color:#fff;font-size:1.2rem;margin:0 0 18px}
+.cta-text strong{display:block;font-size:2.2rem;font-weight:800;color:var(--violet);letter-spacing:2px;text-shadow:0 0 20px var(--violet),0 0 40px var(--violet2)}
+.cta-button{display:inline-block;background:linear-gradient(90deg,var(--violet),var(--violet2));color:#fff;padding:14px 28px;border-radius:50px;font-weight:700;text-transform:uppercase;letter-spacing:1px;box-shadow:0 0 18px rgba(255,255,255,.25)}
+.cta-button:hover{transform:scale(1.05)}
+
+/* FOOTER */
+.footer{background:#070707;border-top:1px solid rgba(255,255,255,.08);text-align:center;padding:38px 0}
+.footer a{color:var(--violet)} .copy{color:#9c9c9c;font-size:.9rem;margin-top:6px}
+
+/* Desktop */
+@media (min-width:900px){
+  .brand{font-size:3.6rem}
+  .fx-text h2{font-size:2rem}
+  .grid-3{grid-template-columns:repeat(3,1fr)}
+}
+</style>
 </head>
 <body>
 
-  <!-- HERO -->
-  <header class="hero">
-    <div class="wrap">
-      <h1 class="brand">ShowBiz <span>One</span></h1>
-      <p class="lead">
-        Creiamo emozioni attraverso tecnologia, arte e spettacolo.
-        ShowBiz One trasforma ogni evento in un’esperienza scenica, con audio, luci,
-        video ed effetti speciali di livello internazionale.
-      </p>
-      <p class="sub">
-        Un team di professionisti del mondo dello spettacolo che unisce competenza tecnica e creatività artistica.
-        Dalla progettazione alla regia, realizziamo eventi e produzioni con stile, precisione e passione.
-      </p>
-    
-    </div>
-  </header>
-  
+<!-- HERO -->
+<header class="hero">
+  <div class="wrap">
+    <h1 class="brand">ShowBiz <span>One</span></h1>
+    <p class="lead">Creiamo emozioni attraverso tecnologia, arte e spettacolo. ShowBiz One trasforma ogni evento in un’esperienza scenica, con audio, luci, video ed effetti speciali di livello internazionale.</p>
+    <p class="sub">Un team di professionisti del mondo dello spettacolo che unisce competenza tecnica e creatività artistica. Dalla progettazione alla regia, realizziamo eventi e produzioni con stile, precisione e passione.</p>
+  </div>
+</header>
+
 <!-- EFFETTI SPECIALI -->
-<section class="section highlight" id="fx">
-  <div class="fx-full">
-    <img 
-      src="https://raw.githubusercontent.com/Kikkodancer/ShowBizOne-/refs/heads/main/IMG_20251030_160554.jpg" 
-      alt="ShowBiz One - Effetti speciali con fiamme e laser" />
-    <div class="fx-overlay">
+<section class="fx-section" id="fx">
+  <div class="fx-image">
+    <img src="https://raw.githubusercontent.com/kikkodancer/ShowBizOne-/main/IMG_20251030_160554.jpg" alt="ShowBiz One - Effetti speciali con fiamme e laser">
+    <div class="fx-text">
       <h2>EFFETTI SPECIALI</h2>
-      <p>
-        Diamo potenza e adrenalina ai tuoi eventi con effetti speciali professionali:
-        CO₂, fiamme, coriandoli, pyro indoor, geyser e special FX per show ad alto impatto.
-      </p>
+      <p>Diamo potenza e adrenalina ai tuoi eventi con effetti speciali professionali: CO₂, fiamme, coriandoli, pyro indoor, geyser e special FX per show ad alto impatto.</p>
     </div>
   </div>
 </section>
-  
-  <!-- DINNER & CIRCUS SHOW (stessa sezione) -->
 
-      <div class="pair">
-        <!-- DINNER SHOW -->
-        <section class="shows">
+<!-- DINNER & CIRCUS SHOW (affiancati) -->
+<section class="shows" id="shows">
   <div class="show-card">
-    <img src="IMG_20250831_224836.jpg" alt="Dinner Show – ballerini con luci viola">
+    <!-- Sostituisci il nome se diverso nel repo -->
+    <img src="./IMG_20250831_224836.jpg" alt="Dinner Show — ballerini con luci viola">
     <div class="show-overlay">
       <h2>Dinner Show</h2>
-      <p>
-        Spettacoli eleganti con musica dal vivo e coreografie d’effetto.<br>
-        Un mix di eleganza, tecnologia e arte per rendere unica ogni serata.
-      </p>
+      <p>Spettacoli eleganti con musica dal vivo e coreografie d’effetto. Un mix di eleganza, tecnologia e arte per rendere unica ogni serata.</p>
     </div>
   </div>
 
   <div class="show-card">
-    <img src="gettyimages-471730013-612x612.jpg
+    <!-- Sostituisci il nome se diverso nel repo -->
+    <img src="./1000126968.jpg" alt="Circus Show — performer con cerchio aereo">
     <div class="show-overlay">
       <h2>Circus Show</h2>
-      <p>
-        Acrobazie, fuoco e illusioni visive per un intrattenimento spettacolare.<br>
-        ShowBizOne porta sul palco energia, eleganza e creatività senza limiti.
-      </p>
+      <p>Acrobazie, fuoco e illusioni visive per un intrattenimento spettacolare. ShowBizOne porta sul palco energia, eleganza e creatività senza limiti.</p>
     </div>
   </div>
 </section>
+
+<!-- SERVICE AUDIO/LUCI/VIDEO -->
 <section class="section" id="service">
-    <div class="wrap">
-          <h3>Audio Professionale</h3>
-          <p>Impianti audio di alta qualità per eventi, concerti e spettacoli live.</p>
-        </article>
-        <article class="card">
-          <h3>Luci e Scenografie</h3>
-          <p>Illuminazione dinamica e scenografie luminose per creare atmosfere uniche.</p>
-        </article>
-        <article class="card">
-          <h3>Video e Proiezioni</h3>
-          <p>Schermi LED e proiezioni per eventi indoor e outdoor.</p>
-        </article>
-      </div>
+  <div class="wrap">
+    <h2>Service Audio · Luci · Video</h2>
+    <div class="grid-3">
+      <article class="card">
+        <h3>Audio Professionale</h3>
+        <p>Impianti audio di alta qualità per eventi, concerti e spettacoli live.</p>
+      </article>
+      <article class="card">
+        <h3>Luci e Scenografie</h3>
+        <p>Illuminazione dinamica e scenografie luminose per creare atmosfere uniche.</p>
+      </article>
+      <article class="card">
+        <h3>Video e Proiezioni</h3>
+        <p>Schermi LED e proiezioni per eventi indoor e outdoor.</p>
+      </article>
     </div>
+  </div>
 </section>
 
-  <!-- CTA: Richiedi il tuo spettacolo -->
+<!-- CTA -->
 <div class="cta-container">
   <p class="cta-text">Prenota ora il tuo evento con <strong>ShowBizOne</strong></p>
-  <a href="https://wa.me/393792603685" target="_blank" class="cta-button">
-    🎭 Richiedi il tuo spettacolo
-  </a>
+  <a href="https://wa.me/393792603685" target="_blank" class="cta-button">🎭 Richiedi il tuo spettacolo</a>
 </div>
-  
-  <!-- FOOTER -->
-  <footer class="footer">
-    <div class="wrap">
-      <h3>Contatti</h3>
-      <p>📞 <a href="https://wa.me/393792603685" target="_blank" rel="noopener">+39 379 260 3685</a></p>
-      <p>📧 <a href="mailto:info@showbizone.it">info@showbizone.it</a></p>
-      <p class="copy">© 2025 ShowBiz One — Tutti i diritti riservati</p>
-    </div>
-  </footer>
+
+<!-- FOOTER -->
+<footer class="footer">
+  <div class="wrap">
+    <h3>Contatti</h3>
+    <p>📞 <a href="https://wa.me/393792603685" target="_blank">+39 379 260 3685</a></p>
+    <p>📧 <a href="mailto:info@showbizone.it">info@showbizone.it</a></p>
+    <p class="copy">© 2025 ShowBiz One — Tutti i diritti riservati</p>
+  </div>
+</footer>
+
 </body>
 </html>
