--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ img{max-width:100%;display:block}
 <section class="shows" id="shows">
   <div class="show-card">
     <!-- Sostituisci il nome se diverso nel repo -->
-    <img src="./IMG_20250831_224836.jpg" alt="Dinner Show — ballerini con luci viola">
+    <img src="https://raw.githubusercontent.com/Kikkodancer/ShowBizOne-/refs/heads/main/dinner-show-spettacolo%20(1).jpg">
     <div class="show-overlay">
       <h2>Dinner Show</h2>
       <p>Spettacoli eleganti con musica dal vivo e coreografie d’effetto. Un mix di eleganza, tecnologia e arte per rendere unica ogni serata.</p>
