--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ img{max-width:100%;display:block}
 
   <div class="show-card">
     <!-- Sostituisci il nome se diverso nel repo -->
-    <img src="./1000126968.jpg" alt="Circus Show — performer con cerchio aereo">
+    <img src="https://raw.githubusercontent.com/Kikkodancer/ShowBizOne-/refs/heads/main/gettyimages-471730013-612x612.jpg">
     <div class="show-overlay">
       <h2>Circus Show</h2>
       <p>Acrobazie, fuoco e illusioni visive per un intrattenimento spettacolare. ShowBizOne porta sul palco energia, eleganza e creatività senza limiti.</p>
