--- a/index.html
+++ b/index.html
@@ -115,7 +115,15 @@ img{max-width:100%;display:block}
       <p>Spettacoli eleganti con musica dal vivo e coreografie d’effetto. Un mix di eleganza, tecnologia e arte per rendere unica ogni serata.</p>
     </div>
   </div>
-
+<!-- GALLERIA DINNER SHOW -->
+<div class="gallery-overlay" id="dinnerGallery">
+  <div class="gallery-content">
+    <span class="close-gallery" id="closeDinnerGallery">&times;</span>
+    <img src="https://raw.githubusercontent.com/Kikkodancer/ShowBizOne-/refs/heads/main/dinner-show-spettacolo%20(1).jpg" alt="Dinner Show — spettacolo con ballerini, performer e luci sceniche durante la cena">
+    <img src="https://raw.githubusercontent.com/Kikkodancer/ShowBizOne-/refs/heads/main/dinner-show-2.jpg" alt="Dinner Show — coreografie e spettacolo dal vivo durante la cena">
+    <img src="https://raw.githubusercontent.com/Kikkodancer/ShowBizOne-/refs/heads/main/dinner-show-3.jpg" alt="Dinner Show — performer e luce scenica viola ShowBizOne">
+  </div>
+</div>
   <div class="show-card">
     <!-- Sostituisci il nome se diverso nel repo -->
     <img src="https://raw.githubusercontent.com/Kikkodancer/ShowBizOne-/refs/heads/main/gettyimages-471730013-612x612.jpg">
