--- a/index.html
+++ b/index.html
@@ -83,6 +83,15 @@ img{max-width:100%;display:block}
 }
 </style>
 </head>
+  <script>
+document.querySelector('.show-overlay h2').addEventListener('click', function() {
+  document.getElementById('dinnerGallery').style.display = 'flex';
+});
+
+document.getElementById('closeDinnerGallery').addEventListener('click', function() {
+  document.getElementById('dinnerGallery').style.display = 'none';
+});
+  </script>
 <body>
   
 <!-- HERO -->
