--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@ img{max-width:100%;display:block}
 <header class="hero">
   <div class="wrap">
     <h1 class="brand">ShowBiz <span>One</span></h1>
+    <h2 class="subtitle">Entertainment</h2>
     <p class="lead">Creiamo emozioni attraverso tecnologia, arte e spettacolo. ShowBiz One trasforma ogni evento in un’esperienza scenica, con audio, luci, video ed effetti speciali di livello internazionale.</p>
     <p class="sub">Un team di professionisti del mondo dello spettacolo che unisce competenza tecnica e creatività artistica. Dalla progettazione alla regia, realizziamo eventi e produzioni con stile, precisione e passione.</p>
   </div>
