--- a/index.html
+++ b/index.html
@@ -153,9 +153,10 @@ img{max-width:100%;display:block}
 <header class="hero">
   <div class="wrap">
     <h1 class="brand">
-  ShowBiz <span>One</span><br>
-  <span class="entertainment">Entertainment</span>
-</h1>
+  <span class="showbiz">ShowBiz</span><br>
+  <span class="entertainment">Entertainment</span><br>
+  <span class="one">One</span>
+    </h1>
     <p class="lead">Creiamo emozioni attraverso tecnologia, arte e spettacolo. ShowBiz One trasforma ogni evento in un’esperienza scenica, con audio, luci, video ed effetti speciali di livello internazionale.</p>
     <p class="sub">Un team di professionisti del mondo dello spettacolo che unisce competenza tecnica e creatività artistica. Dalla progettazione alla regia, realizziamo eventi e produzioni con stile, precisione e passione.</p>
   </div>
