--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ img{max-width:100%;display:block}
 <header class="hero">
   <div class="wrap">
     <h1 class="brand">
-  <span class="showbiz">ShowBiz</span><br>
+  <span class="showbiz">ShowBiz</span>
   <span class="entertainment">Entertainment</span><br>
   <span class="one">One</span>
     </h1>
