--- a/index.html
+++ b/index.html
@@ -148,20 +148,27 @@ img{max-width:100%;display:block}
 }
 </style>
 </head>
-
 <!-- HERO -->
 <header class="hero">
   <div class="wrap">
     <h1 class="brand">
-  <span class="showbiz">ShowBiz</span>
-  <span class="entertainment">Entertainment</span><br>
-  <span class="one">One</span>
+      <span class="showbiz">
+        ShowBiz
+        <span class="entertainment">Entertainment</span>
+      </span><br>
+      <span class="one">One</span>
     </h1>
-    <p class="lead">Creiamo emozioni attraverso tecnologia, arte e spettacolo. ShowBiz One trasforma ogni evento in un’esperienza scenica, con audio, luci, video ed effetti speciali di livello internazionale.</p>
-    <p class="sub">Un team di professionisti del mondo dello spettacolo che unisce competenza tecnica e creatività artistica. Dalla progettazione alla regia, realizziamo eventi e produzioni con stile, precisione e passione.</p>
+    
+    <p class="lead">
+      Creiamo emozioni attraverso tecnologia, arte e spettacolo. ShowBiz One trasforma ogni evento
+      in un’esperienza scenica, con audio, luci, video ed effetti speciali di livello internazionale.
+    </p>
+    <p class="sub">
+      Un team di professionisti del mondo dello spettacolo che unisce competenza tecnica e creatività artistica.
+      Dalla progettazione alla regia, realizziamo eventi e produzioni con stile, precisione e passione.
+    </p>
   </div>
 </header>
-
 <!-- EFFETTI SPECIALI -->
 <section class="fx-section" id="fx">
   <div class="fx-image">
