--- a/index.html
+++ b/index.html
@@ -152,11 +152,11 @@ img{max-width:100%;display:block}
 <header class="hero">
   <div class="wrap">
     <h1 class="brand">
-      <span class="showbiz">
-        ShowBiz
-        <span class="entertainment">Entertainment</span>
-      </span><br>
-      <span class="one">One</span>
+  <span class="showbiz-wrap">
+    ShowBiz
+    <span class="entertainment">Entertainment</span>
+  </span>
+  <span class="one"> One</span>
     </h1>
     
     <p class="lead">
