--- a/index.html
+++ b/index.html
@@ -151,14 +151,7 @@ img{max-width:100%;display:block}
 <!-- HERO -->
 <header class="hero">
   <div class="wrap">
-    <h1 class="brand">
-  <span class="showbiz-wrap">
-    ShowBiz
-    <span class="entertainment">Entertainment</span>
-  </span>
-  <span class="one"> One</span>
-    </h1>
-    
+  <h1 class="brand">ShowBiz<span>One</span></h1>
     <p class="lead">
       Creiamo emozioni attraverso tecnologia, arte e spettacolo. ShowBiz One trasforma ogni evento
       in un’esperienza scenica, con audio, luci, video ed effetti speciali di livello internazionale.
