--- a/index.html
+++ b/index.html
@@ -152,7 +152,10 @@ img{max-width:100%;display:block}
 <header class="hero">
   <div class="wrap">
     <h1 class="brand">ShowBiz<span>One</span></h1>
-    <p class="lead">
+<p>
+  Trasformiamo <strong>eventi</strong> in esperienze uniche, fondendo <strong>arte</strong>,
+  <strong>tecnologia</strong> e <strong>spettacolo</strong>.
+</p>
       Creiamo emozioni attraverso tecnologia, arte e spettacolo. ShowBiz One trasforma ogni evento
       in un’esperienza scenica, con audio, luci, video ed effetti speciali di livello internazionale.
     </p>
