--- a/index.html
+++ b/index.html
@@ -151,7 +151,14 @@ img{max-width:100%;display:block}
 <!-- HERO -->
 <header class="hero">
   <div class="wrap">
+    <p>
+      <strong>Arte</strong>, <strong>musica</strong>, <strong>performance</strong>, 
+      <strong>tecnologia</strong> e <strong>intrattenimento</strong> si fondono per creare esperienze uniche dal vivo.
+    </p>
+
     <h1 class="brand">ShowBiz<span>One</span></h1>
+  </div>
+</header>
 <p>
   Trasformiamo <strong>eventi</strong> in esperienze uniche, fondendo <strong>arte</strong>,
   <strong>tecnologia</strong> e <strong>spettacolo</strong>.
