--- a/index.html
+++ b/index.html
@@ -152,22 +152,16 @@ img{max-width:100%;display:block}
 <header class="hero">
   <div class="wrap">
     <p>
-      <strong>Arte</strong>, <strong>musica</strong>, <strong>performance</strong>, 
-      <strong>tecnologia</strong> e <strong>intrattenimento</strong> si fondono per creare esperienze uniche dal vivo.
+    <h1 class="brand">ShowBiz<span>One</span></h1>
+
+    <p class="lead">
+      Trasformiamo <strong>eventi</strong> in esperienze indimenticabili,
+      fondendo <strong>arte</strong>, <strong>tecnologia</strong> e <strong>spettacolo</strong>.
     </p>
 
-    <h1 class="brand">ShowBiz<span>One</span></h1>
-  </div>
-</header>
-<p>
-  Trasformiamo <strong>eventi</strong> in esperienze uniche, fondendo <strong>arte</strong>,
-  <strong>tecnologia</strong> e <strong>spettacolo</strong>.
-</p>
-      Creiamo emozioni attraverso tecnologia, arte e spettacolo. ShowBiz One trasforma ogni evento
-      in un’esperienza scenica, con audio, luci, video ed effetti speciali di livello internazionale.
-    </p>
     <p class="sub">
-      Un team di professionisti del mondo dello spettacolo che unisce competenza tecnica e creatività artistica.
+      Un team di professionisti dello spettacolo che unisce competenza tecnica e creatività artistica
+      per dare vita a show di livello internazionale.
     </p>
   </div>
 </header>
