--- a/index.html
+++ b/index.html
@@ -240,3 +240,16 @@ img{max-width:100%;display:block}
 
 </body>
 </html>
+<footer class="footer">
+  <div class="wrap">
+    <h3>Contatti</h3>
+    <p>
+      <a href="https://wa.me/393792603685" target="_blank" class="whatsapp-link">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" class="whatsapp-icon">
+        +39 379 260 3685
+      </a>
+    </p>
+    <p>📧 <a href="mailto:info@showbizone.it">info@showbizone.it</a></p>
+    <p class="copy">© 2025 ShowBiz One — Tutti i diritti riservati</p>
+  </div>
+</footer>
